app_c/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - sswasm.westus2.cloudapp.azure.com
        - sswasm.com
      secretName: sswasm-tls  
  rules:
    - host: sswasm.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: wasmcloud-api
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: smartcms-frontend
                port:
                  number: 80  
    - host: sswasm.westus2.cloudapp.azure.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: wasmcloud-api
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: smartcms-frontend
                port:
                  number: 80
